# RealOrFakeImageService

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: model_choose.ipynb
src/: config.py  database.py  redis_conn.py  schemas.py  utils.py
src/routers/: __init__.py  checker.py
src/services/: __init__.py  checker.py  model.py
