[project]
name = "realorfake"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "asyncpg==0.31.0",
    "click==8.4.1",
    "colorama==0.4.6",
    "fastapi==0.138.0",
    "flatbuffers==25.12.19",
    "greenlet==3.5.2",
    "h11==0.16.0",
    "hiredis==3.4.0",
    "idna==3.18",
    "numpy==2.4.6",
    "onnxruntime==1.27.0",
    "packaging==26.2",
    "pillow==12.2.0",
    "protobuf==7.35.1",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "python-multipart==0.0.32",
    "redis==8.0.0",
    "sqlalchemy==2.0.51",
    "starlette==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "uvicorn==0.49.0",
]
